--- a/RapidRecruit/Views/Home/Index.cshtml
+++ b/RapidRecruit/Views/Home/Index.cshtml
@@ -38,9 +38,12 @@
                 </div>
 
                 <div class="mt-4 pt-4 border-t border-gray-200">
-                    <button class="w-full bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded transition-colors">
+                    <a asp-controller="Home"
+                       asp-action="Job"
+                       asp-route-id="@item.Id"
+                       class="block w-full bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded transition-colors text-center">
                         View Details
-                    </button>
+                    </a>
                 </div>
             </div>
         }
